@@ -1,3 +1,10 @@
+2020-08-03 Sergey Belyashov <sergey.belyashov@gmail.com>
+
+	* sim/ucsim/z80.src/z80.cc,
+	  src/z80/gen.c,
+	  support/regression/tests/z80n-push-nn.c:
+	  Fix bug #3032: Something wrong with z80n push nn
+
 2020-08-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/main.c,
